--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ footer{
         <!-- PROJECT CARD 1 - EDIT BELOW -->
         <div class="project-card">
           <div class="project-image">
-            <!-- ADD YOUR IMAGE: <img src="elemental-landscape.jpg" alt="Elemental Landscapes project"> -->
+            <img src="elemental-landscapes.jpg" alt="Elemental Landscapes project">
             <span class="project-badge">Day Job</span>
           </div>
           <div class="project-info">
@@ -1285,4 +1285,5 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     const target = document.querySelector(this.getAttribute('href'));
     if(target){
       const headerOffset = 90;
+
       const elementPosition = target.getBounding
