--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@ footer{
         <!-- PROJECT CARD 3 - EDIT BELOW -->
         <div class="project-card">
           <div class="project-image">
-            <!-- ADD YOUR IMAGE: <img src="art-design.jpg" alt="Art and design work"> -->
+            <img src="art-design.jpg" alt="Art and design work">
           </div>
           <div class="project-info">
             <div class="project-meta">Creative Projects</div>
@@ -1287,3 +1287,4 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       const headerOffset = 90;
 
       const elementPosition = target.getBounding
+
