--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@ footer{
     <!-- FULL-WIDTH BACKGROUND IMAGE - ADD YOUR IMAGE HERE -->
     <div class="hero-background">
       <!-- Sample image - Replace with your own workspace/landscape photo -->
-      <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?auto=format&fit=crop&w=2400&q=80" alt="Modern workspace">
+      <img src="hero-background.jpg" alt="CS Gibbs workspace">
     </div>
     
     <div class="hero-grid">
@@ -1287,4 +1287,5 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       const headerOffset = 90;
 
       const elementPosition = target.getBounding
+
 
