--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@ footer{
         <!-- PROJECT CARD 2 - EDIT BELOW -->
         <div class="project-card">
           <div class="project-image">
-            <!-- ADD YOUR IMAGE: <img src="ai-workflow.jpg" alt="AI workflow"> -->
+            <img src="ai-workflow.jpg" alt="AI workflow">
           </div>
           <div class="project-info">
             <div class="project-meta">Process & Tools</div>
@@ -1287,6 +1287,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       const headerOffset = 90;
 
       const elementPosition = target.getBounding
+
 
 
 
