--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@ footer{
           <!-- PRODUCT CARD 1 - EDIT BELOW -->
           <div class="product-card-large">
             <div class="product-visual">
-              <!-- ADD YOUR IMAGE: <img src="fishwater-maps-product.jpg" alt="Fishwater Maps"> -->
+              <img src="fishwater-maps.jpg" alt="Fishwater Maps">
               <div class="product-icon">🗺️</div>
             </div>
             <div class="product-details">
@@ -1287,6 +1287,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       const headerOffset = 90;
 
       const elementPosition = target.getBounding
+
 
 
 
