--- a/index.html
+++ b/index.html
@@ -1148,8 +1148,8 @@ footer{
           <!-- PRODUCT CARD 2 - EDIT BELOW -->
           <div class="product-card-large">
             <div class="product-visual">
-              <!-- ADD YOUR IMAGE: <img src="flow-state-product.jpg" alt="Flow State Fabrication"> -->
-              <div class="product-icon">⚙️</div>
+              <img src="flow-state-fab.jpg" alt="Flow State Fabrication">
+              
             </div>
             <div class="product-details">
               <h3>Flow State Fabrication</h3>
@@ -1287,6 +1287,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       const headerOffset = 90;
 
       const elementPosition = target.getBounding
+
 
 
 
