--- a/index.html
+++ b/index.html
@@ -1023,10 +1023,10 @@ footer{
 <main>
   <!-- Hero -->
   <section class="hero">
-    <!-- FULL-WIDTH BACKGROUND IMAGE - ADD YOUR IMAGE HERE -->
+
     <div class="hero-background">
-      <!-- Sample image - Replace with your own workspace/landscape photo -->
-      <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?auto=format&fit=crop&w=2400&q=80" alt="Modern workspace">
+
+      <img src="hero-background.jpg">
     </div>
     
     <div class="hero-grid">
@@ -1059,10 +1059,10 @@ footer{
       </div>
       
       <div class="project-grid">
-        <!-- PROJECT CARD 1 - EDIT BELOW -->
+
         <div class="project-card">
           <div class="project-image">
-            <!-- ADD YOUR IMAGE: <img src="elemental-landscape.jpg" alt="Elemental Landscapes project"> -->
+<img src="elemental-landscapes.jpg" alt="Elemental Landscapes project">
             <span class="project-badge">Day Job</span>
           </div>
           <div class="project-info">
@@ -1080,7 +1080,7 @@ footer{
         <!-- PROJECT CARD 2 - EDIT BELOW -->
         <div class="project-card">
           <div class="project-image">
-            <!-- ADD YOUR IMAGE: <img src="ai-workflow.jpg" alt="AI workflow"> -->
+   <img src="ai-workflow.jpg" alt="Elemental Landscapes project">
           </div>
           <div class="project-info">
             <div class="project-meta">Process & Tools</div>
@@ -1286,3 +1286,4 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     if(target){
       const headerOffset = 90;
       const elementPosition = target.getBounding
+
