--- a/index.html
+++ b/index.html
@@ -1094,10 +1094,10 @@ footer{
           </div>
         </div>
         
-        <!-- PROJECT CARD 3 - EDIT BELOW -->
+ 
         <div class="project-card">
           <div class="project-image">
-            <!-- ADD YOUR IMAGE: <img src="art-design.jpg" alt="Art and design work"> -->
+<img src="art-design.jpg" alt="Art and design work">
           </div>
           <div class="project-info">
             <div class="project-meta">Creative Projects</div>
@@ -1125,7 +1125,7 @@ footer{
           <!-- PRODUCT CARD 1 - EDIT BELOW -->
           <div class="product-card-large">
             <div class="product-visual">
-              <!-- ADD YOUR IMAGE: <img src="fishwater-maps-product.jpg" alt="Fishwater Maps"> -->
+              <img src="fishwater-maps.jpg" alt="Fishwater Maps river map">
               <div class="product-icon">🗺️</div>
             </div>
             <div class="product-details">
@@ -1148,7 +1148,7 @@ footer{
           <!-- PRODUCT CARD 2 - EDIT BELOW -->
           <div class="product-card-large">
             <div class="product-visual">
-              <!-- ADD YOUR IMAGE: <img src="flow-state-product.jpg" alt="Flow State Fabrication"> -->
+              <img src="flow-state-fab.jpg" alt="Flow State Fabrication 3D printed product">
               <div class="product-icon">⚙️</div>
             </div>
             <div class="product-details">
@@ -1286,4 +1286,5 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     if(target){
       const headerOffset = 90;
       const elementPosition = target.getBounding
+
 
